--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,17 +20,20 @@
             android:layout_height="250dp"/>
 
 
-        <View
+        <Button
             android:id="@+id/view1"
             android:layout_width="match_parent"
-            android:background="@color/colorAccent"
-            android:layout_height="40dp"/>
+            android:layout_height="wrap_content"/>
 
-        <View
+        <Button
             android:id="@+id/view2"
-            android:background="@color/colorAccent"
             android:layout_width="match_parent"
-            android:layout_height="40dp"/>
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/view3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <View
             android:layout_width="match_parent"
