--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         tools:context=".MainActivity">
-
 
         <com.to.aboomy.banner.Banner
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="250dp"/>
+            android:layout_height="200dp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
 
+            <Button
+                android:id="@+id/add"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/lib_pub_select_btn_main"
+                android:gravity="center"
+                android:text="添加一页"
+                android:textAllCaps="false"
+                android:textColor="@color/lib_pub_color_select_btn_main"
+                android:textSize="15dp" />
 
+            <Button
+                android:id="@+id/remove"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/lib_pub_select_btn_main"
+                android:gravity="center"
+                android:text="减少一页"
+                android:textAllCaps="false"
+                android:textColor="@color/lib_pub_color_select_btn_main"
+                android:textSize="15dp" />
+
+        </LinearLayout>
 
         <Button
-            android:id="@+id/add"
-            android:text="add"
+            android:id="@+id/update"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <Button
-            android:id="@+id/remove"
-            android:text="remove"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/lib_pub_select_btn_main"
+            android:gravity="center"
+            android:text="刷新"
+            android:textAllCaps="false"
+            android:textColor="@color/lib_pub_color_select_btn_main"
+            android:textSize="15dp" />
 
 
     </LinearLayout>
