--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
 
         </LinearLayout>
 
+
         <Button
             android:id="@+id/update"
             android:layout_width="match_parent"
@@ -63,6 +64,21 @@
             android:background="@drawable/lib_pub_select_btn_main"
             android:gravity="center"
             android:text="刷新"
+            android:textAllCaps="false"
+            android:textColor="@color/lib_pub_color_select_btn_main"
+            android:textSize="15dp" />
+
+        <Button
+            android:id="@+id/updateStyle"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/lib_pub_select_btn_main"
+            android:gravity="center"
+            android:text="切换内置indicator样式"
             android:textAllCaps="false"
             android:textColor="@color/lib_pub_color_select_btn_main"
             android:textSize="15dp" />
