--- a/app/src/main/res/layout/activity_mult.xml
+++ b/app/src/main/res/layout/activity_mult.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:background="@android:color/white"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.to.aboomy.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="140dp"/>
+        android:layout_height="200dp"
+        android:layout_marginTop="100dp" />
 
 </LinearLayout>
