--- a/app/src/main/res/layout/activity_mult.xml
+++ b/app/src/main/res/layout/activity_mult.xml
@@ -8,7 +8,6 @@
     <com.to.aboomy.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="100dp" />
+        android:layout_height="150dp" />
 
 </LinearLayout>
