--- a/app/src/main/res/layout/activity_mult.xml
+++ b/app/src/main/res/layout/activity_mult.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <com.to.aboomy.banner.Banner
-        android:id="@+id/banner"
+        android:id="@+id/banner1"
         android:layout_width="match_parent"
         android:layout_height="150dp" />
+
+    <com.to.aboomy.banner.Banner
+        android:id="@+id/banner2"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp" />
+
+    <com.to.aboomy.banner.IndicatorView
+        android:id="@+id/indicator2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp" />
+
+
+    <com.to.aboomy.banner.Banner
+        android:id="@+id/banner3"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="20dp" />
+
 
 </LinearLayout>
