--- a/app/src/main/res/layout/activity_indicator2.xml
+++ b/app/src/main/res/layout/activity_indicator2.xml
@@ -7,4 +7,23 @@
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="150dp"/>
+
+    <Button
+        android:id="@+id/select"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/lib_pub_select_btn_main"
+        android:gravity="center"
+        android:text="DashPointView"
+        android:textAllCaps="false"
+        android:textColor="@color/lib_pub_color_select_btn_main"
+        android:textSize="15dp" />
+
+    <com.to.aboomy.banner.Banner
+        android:id="@+id/banner2"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"/>
 </LinearLayout>
