--- a/app/src/main/res/layout/item_banner_image.xml
+++ b/app/src/main/res/layout/item_banner_image.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.lihang.ShadowLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="3dp">
+    app:hl_cornerRadius="10dp"
+    app:hl_dy="1dp"
+    app:hl_dx="1dp"
+    app:hl_shadowColor="#4D868686"
+    app:hl_shadowBackColor="#fff"
+    app:hl_shadowLimit="2dp">
 
     <ImageView
         android:id="@+id/img"
@@ -12,6 +16,6 @@
         android:layout_height="match_parent"
         android:scaleType="fitXY" />
 
-</android.support.v7.widget.CardView>
+</com.lihang.ShadowLayout>
 
 
