--- a/app/src/main/res/layout/fragment_test1_child.xml
+++ b/app/src/main/res/layout/fragment_test1_child.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.recyclerview.widget.RecyclerView
