--- a/app/src/main/res/layout/activity_pager2.xml
+++ b/app/src/main/res/layout/activity_pager2.xml
@@ -5,15 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:text="viewpager2请查看androidx分支"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"/>
 
     <com.to.aboomy.pager2.Banner
         android:id="@+id/banner"
-
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-
-
-    </com.to.aboomy.pager2.Banner>
+        android:layout_height="150dp"/>
 
 
     <Button
