--- a/app/src/main/res/layout/activity_pager2.xml
+++ b/app/src/main/res/layout/activity_pager2.xml
@@ -1,22 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#fff"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical">
 
     <TextView
-        android:text="viewpager2请查看androidx分支"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"/>
+        android:text="viewpager2请查看pager2模块" />
 
     <com.to.aboomy.pager2.Banner
         android:id="@+id/banner"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        android:layout_height="150dp"
+        android:layout_marginTop="10dp" />
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <Button
+            android:id="@+id/add"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/lib_pub_select_btn_main"
+            android:gravity="center"
+            android:text="添加一页"
+            android:textAllCaps="false"
+            android:textColor="@color/lib_pub_color_select_btn_main"
+            android:textSize="15dp" />
+
+        <Button
+            android:id="@+id/remove"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/lib_pub_select_btn_main"
+            android:gravity="center"
+            android:text="减少一页"
+            android:textAllCaps="false"
+            android:textColor="@color/lib_pub_color_select_btn_main"
+            android:textSize="15dp" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/update"
@@ -33,7 +68,7 @@
         android:textSize="15dp" />
 
     <Button
-        android:id="@+id/update2"
+        android:id="@+id/updateStyle"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
@@ -41,22 +76,25 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/lib_pub_select_btn_main"
         android:gravity="center"
-        android:text="刷新"
+        android:text="切换内置indicator样式"
         android:textAllCaps="false"
         android:textColor="@color/lib_pub_color_select_btn_main"
         android:textSize="15dp" />
 
 
-    <com.to.aboomy.banner.Banner
-        android:id="@+id/banner1"
+    <Button
+        android:id="@+id/noLoop"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="20dp" />
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/lib_pub_select_btn_main"
+        android:gravity="center"
+        android:text="停止自动轮播"
+        android:textAllCaps="false"
+        android:textColor="@color/lib_pub_color_select_btn_main"
+        android:textSize="15dp" />
 
-
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:layout_width="match_parent"
-        android:layout_height="200dp"/>
 
 </LinearLayout>
