--- a/app/src/main/res/layout/activity_viewpager2_lunch.xml
+++ b/app/src/main/res/layout/activity_viewpager2_lunch.xml
@@ -18,5 +18,17 @@
         android:textColor="@color/lib_pub_color_select_btn_main"
         android:textSize="15dp" />
 
-
+    <Button
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/lib_pub_select_btn_main"
+        android:gravity="center"
+        android:text="recyclerView使用实例"
+        android:textAllCaps="false"
+        android:textColor="@color/lib_pub_color_select_btn_main"
+        android:textSize="15dp" />
 </LinearLayout>
