--- a/app/src/main/res/layout/activity_pager2.xml
+++ b/app/src/main/res/layout/activity_pager2.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center_horizontal"
         android:text="viewpager2请查看pager2模块" />
 
-    <com.to.aboomy.pager2.Banner
+    <com.to.aboomy.pager2Banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -96,5 +96,9 @@
         android:textColor="@color/lib_pub_color_select_btn_main"
         android:textSize="15dp" />
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager2"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"/>
 
 </LinearLayout>
