--- a/app/src/main/res/layout/activity_pager2.xml
+++ b/app/src/main/res/layout/activity_pager2.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center_horizontal"
         android:text="viewpager2请查看pager2模块" />
 
-    <com.to.aboomy.pager2Banner.Banner
+    <com.to.aboomy.pager2banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="150dp"
