--- a/app/src/main/res/layout/item_view_pager2_banner.xml
+++ b/app/src/main/res/layout/item_view_pager2_banner.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
-    <com.to.aboomy.pager2Banner.Banner
+    <com.to.aboomy.pager2banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="156dp"
