--- a/app/src/main/res/layout/activity_pager2.xml
+++ b/app/src/main/res/layout/activity_pager2.xml
@@ -111,4 +111,19 @@
         android:textColor="@color/lib_pub_color_select_btn_main"
         android:textSize="15dp" />
 
+    <Button
+        android:id="@+id/test"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/lib_pub_select_btn_main"
+        android:gravity="center"
+        android:text="测试多次调用startTurning"
+        android:textAllCaps="false"
+        android:textColor="@color/lib_pub_color_select_btn_main"
+        android:textSize="15dp" />
+
+
 </LinearLayout>
